2006-06-14  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Adding LogObservers): add some limited
	docs on writing new LogObserver classes
	(Writing New Status Plugins): brief docs on how Status Plugins fit
	together

	* buildbot/process/step_twisted.py (TrialTestCaseCounter):
	implement a LogObserver that counts how many unit tests have been
	run so far
	(Trial.__init__): wire it in
	* buildbot/test/test_twisted.py (Counter): unit test for it

	* buildbot/process/step_twisted.py (HLint.commandComplete): update
	to new cmd.logs['stdio'] scheme
	(Trial.commandComplete): same
	(BuildDebs.commandComplete): same

	* buildbot/process/step.py (LoggedRemoteCommand): use a dict of
	LogFiles, instead of just a single one. The old single logfile is
	now called "stdio". LoggedRemoteCommand no longer creates a
	LogFile for you (the code to do that was broken anyway). If you
	don't create a "stdio" LogFile, then stdout/stderr will be
	discarded.
	(LogObserver): implement "LogObservers", which a BuildStep can add
	to parse the output of a command in real-time. The primary use is
	to provide more useful information to the Progress code, allowing
	better ETA estimates.
	(LogLineObserver): utility subclass which feeds complete lines to
	the parser instead of bytes.
	(BuildStep.progressMetrics): this is safer as a tuple
	(BuildStep.setProgress): utility method, meant to be called by
	LogObservers
	(BuildStep.addLogObserver): new method, to be called at any time
	during the BuildStep (even before any LogFiles have been created),
	to attach (or schedule for eventual attachment) a LogObserver to a
	LogFile.
	(StdioProgressObserver): new LogObserver which replaces the old
	"output" progress gatherer
	(LoggingBuildStep.__init__): same
	(LoggingBuildStep.startCommand): set up the "stdio" LogFile
	(LoggingBuildStep._commandComplete): must use logs['stdio']
	instead of the old single ".log" attribute.
	* buildbot/status/builder.py (LogFile): remove old logProgressTo